<resources>
    <string name="app_name">怦然心动供应商版</string>
    <string name="app_first">first</string>
    <string name="app_login">登陆</string>
    <string name="app_main">主页</string>
    <string name="app_new_order">订单</string>
    <string name="app_order_submit">订单确认</string>
    <string name="app_order_statistics">订单统计</string>
    <string name="app_printer">打印机</string>
    <string name="title_sale_order">首页</string>
    <string name="title_sys_management">我的</string>
    <string name="title_dev_management">设备</string>
    <string name="emailForm">prxd_suppier_debug@163.com</string>
    <string name="formPassword">VSEPLSKVDCXTSAWD</string>
    <string name="emailTo">fshq_debug@163.com</string>
    <string name="emailContentHead">She bangs supplierManagement</string>
    <string name="login_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="welcome">"欢迎:"</string>
    <string name="invalid_username">用户名或密码有误</string>
    <string name="invalid_password">密码须大于5位</string>
    <string name="login">"登陆"</string>
    <string name="login_ing">"登陆中..."</string>
    <string name="login_failed">"登陆失败"</string>
    <string name="nav_order_order">订单</string>
    <string name="nav_order_query">货号查询</string>
    <string name="nav_order_return">返货查询</string>
    <string name="nav_order_credit">信誉</string>
    <string name="nav_order_credit_explain">信誉说明</string>
    <string name="nav_order_account">账号管理</string>
    <string name="nav_order_recode">登陆记录</string>
    <string name="nav_order_printer">打印机</string>
    <string name="link_server_failed">连接服务器失败</string>
    <string name="printer_label">打印机设置</string>
    <string name="printer_title">打印机</string>
    <string name="printer_linking">打印机连接中...</string>
    <string name="printer_linked">打印机已连接</string>
    <string name="printer_scanning">打印机扫描中...</string>
    <string name="printer_scan_finish">扫描完成</string>
    <string name="printer_test">打印测试</string>
    <string name="printer_no_link">未连接打印机，请先连接</string>
    <string name="printer_bill">票据打印机</string>
    <string name="printer_code">条码打印机</string>
    <string name="printer_cpcl">单面打印机</string>
    <string name="printer_wifi_title">WIFI打印机</string>
    <string name="printer_wifi_describe">当前可搜索附件的WiFi打印机</string>
    <string name="printer_bluetooth_title">蓝牙开关</string>
    <string name="printer_bluetooth_describe_on">当前可搜索附件的蓝牙打印机</string>
    <string name="printer_bluetooth_describe_off">打开蓝牙以搜索附件的蓝牙打印机</string>
    <string name="title_paired_devices">已配对</string>
    <string name="title_other_devices">New</string>
    <string name="scan">扫描</string>
    <string name="bluetooth_device_list">蓝牙设备列表</string>
    <string name="select_bluetooth_device">选择蓝牙设备</string>
    <string name="none_bluetooth_device_found">没有找到蓝牙设备</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="scaning">扫描中...</string>
    <string name="usb_devices_list">USB设备列表</string>
    <string name="none_usb_device">没有USB设备</string>
    <string-array name="baudrate">
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>115200</item>
    </string-array>
    <string name="str_no_serialport">该设备不支持串口</string>
    <string name="str_conn_state_disconnect">连接状态：未连接</string>
    <string name="str_conn_state_connecting">连接状态：连接中</string>
    <string name="str_connecting">连接中</string>
    <string name="str_conn_state_connected">连接状态：已连接</string>
    <string name="str_wifi_ip">请输入IP：</string>
    <string name="str_ip">IP: </string>
    <string name="str_port">Port: </string>
    <string name="str_wifi_port">请输入端口号：</string>
    <string name="str_state_query">状态查询</string>
    <string name="str_mode_change">更换打印模式</string>
    <string name="str_disconnect">断开连接</string>
    <string name="str_label_print">标签打印</string>
    <string name="matrix">标签打印矩阵二维码</string>
    <string name="matrix_tip">支持机型（M320）</string>
    <string name="str_label_print_long_photo">标签打印长图</string>
    <string name="str_photo_description">部分机器不支持该指令，会打印空白</string>
    <string name="str_receipt_print">票据打印</string>
    <string name="str_cpcl_print">面单打印</string>
    <string name="str_bluetooth_connect">蓝牙连接</string>
    <string name="str_usb_connect">USB连接</string>
    <string name="str_wifi_connect">wifi连接</string>
    <string name="str_serialport_connect">串口连接</string>
    <string name="str_confirm">确定</string>
    <string name="str_cancel">取消</string>
    <string name="str_cann_printer">请先连接打印机</string>
    <string name="str_bluetooth">蓝牙</string>
    <string name="str_serialport">串口</string>
    <string name="str_usb">USB</string>
    <string name="str_wifi">WIFI</string>
    <string name="str_conn_successful">连接成功！</string>
    <string name="str_conn_fail">连接失败！</string>
    <string name="str_baudrate">波特率：</string>
    <string name="str_serialport_path">串口路径：</string>
    <string name="str_conn_devices">多设备</string>
    <string name="str_conn_receipt_and_label_continuity_print">连续打印</string>
    <string name="str_address">地址：</string>
    <string name="gprinter001">Printer 001</string>
    <string name="gprinter002">Printer 002</string>
    <string name="gprinter003">Printer 003</string>
    <string name="gprinter004">Printer 004</string>
    <string name="disconnect">断开连接</string>
    <string name="cutting">断开连接中...</string>
    <string name="str_disconn">断开</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="connecting">连接中...</string>
    <string name="port">接口:未设定 </string>
    <string name="init_port_info">地址:不详</string>
    <string name="str_enter_print_counts">请输入打印次数：</string>
    <string name="str_choice_printer_command">请选择正确的打印机指令</string>
    <string name="str_printer_conn_normal">打印机连接正常</string>
    <string name="str_printer_out_of_paper">打印机缺纸</string>
    <string name="str_printer_open_cover">打印机开盖</string>
    <string name="str_printer_error">打印机出错</string>
    <string name="str_state">状态：</string>
    <string name="str_interface_undefine">接口：未设定</string>
    <string name="str_select_printer_id">选中id为{0}的打印机</string>
    <string name="bluetooth_is_not_enabled">蓝牙没有开启</string>
    <string name="bluetooth_is_close">蓝牙关闭</string>
    <string-array name="str_interf_type">
        <item>蓝牙</item>
        <item>网口</item>
        <item>USB</item>
    </string-array>
    <string name="str_cpclmode">面单模式</string>
    <string name="str_escmode">票据模式</string>
    <string name="str_tscmode">标签模式</string>
    <string name="str_synchronous_print">多设备同步打印</string>
    <string name="str_printer_printmode_esc">打印模式:ESC</string>
    <string name="str_printer_printmode_tsc">打印模式:TSC</string>
    <string name="str_printer_printmode_cpcl">打印模式:CPCL</string>
    <string name="str_continuityprinter">连续打印:</string>
    <string name="str_continuity_count">连续打印的数目为空</string>
    <string name="str_stop_continuityprint">停止连续打印</string>
    <string name="str_stop_continuityprint_success">成功停止打印</string>
    <string name="str_disconnect_success">成功断开连接</string>
    <string name="str_title_newdev">未配对</string>
    <string name="str_title_pairedev">已配对</string>
    <string name="str_tv_printcount">打印次数:</string>
    <string name="str_print_selftest">打印自检页</string>
    <string name="str_print_xml">打印XML</string>
    <string name="str_mode_tip">打印机已处于%s，无需切换！</string>
    <string name="default_mode">默认模式，小票模式</string>
    <string name="str_bill_printer_no_conn">小票打印机未连接，请先连接！</string>
    <string name="str_code_printer_no_conn">条码打印机未连接，请先连接！</string>
    <string name="request_power">权限请求!</string>
    <string name="request_power_WES">App需要获取所有的权限,请允许！</string>
    <string name="app_crash">App异常崩溃</string>
    <string name="app_crash_msg">很抱歉，App异常崩溃了!</string>
    <string name="app_crash_reset">重启App</string>
    <string name="app_crash_close">退出App</string>
    <string name="app_create_file_failed">创建数据文件失败</string>
    <string name="app_create_file_failed_msg">创建App数据文件失败,App退出运行!</string>
    <string name="sort">排序</string>
    <string name="screen">筛选</string>
    <string name="more">更多</string>
    <string name="goodsID">货号</string>
    <string name="warehouse">库房</string>
    <string name="branch">分店</string>
    <string name="shipment_status">发货状态</string>
    <string name="is_print">是否打印</string>
    <string name="order_time">下单日期</string>
    <string name="shipment_time">发货时间</string>
    <string name="order_all">通下</string>
    <string name="order_first">首单</string>
    <string name="order_CPFR">补货</string>
    <string name="invalid_time">交货截至日期</string>
    <string name="num">数量</string>
    <string name="old_goods_id">原来货号</string>
    <string name="new_goods_id">下单货号</string>
    <string name="bid">进价</string>
    <string name="print_time">打印时间</string>
    <string name="remark">备注</string>
    <string name="printed">已打印</string>
    <string name="no_print">未打印</string>
    <string name="shipment">已发货</string>
    <string name="no_shipment">未发货</string>
    <string name="color">颜色</string>
    <string name="size">尺码</string>
    <string name="staff">供应商</string>
    <string name="businessTime">下单时间</string>
    <string name="order_class">下单类型</string>
    <string name="choice_date">请选择日期</string>
    <string name="reset">重置</string>
    <string name="total">合计</string>
    <string name="search_hint">请输入单号</string>
    <string name="supplier_admonish">供货商千万注意：私自改换面料，版型不正，缩水，褪色都属于质量问题，我们一定会退还给你！！！</string>
    <string name="supplier">供应商</string>
    <string name="goods">商品</string>
    <string name="order">订单</string>
    <string name="goodsClass">货物类型</string>
    <string name="print_goods_code">&#12288;货物条码&#12288;</string>
    <string name="print_area">&#12288;&#12288;片区&#12288;</string>
    <string name="print_warehouse">&#12288;&#12288;库房&#12288;</string>
    <string name="print_order_class">&#12288;下单属性</string>
    <string name="print_goods_class">&#12288;&#12288;类别&#12288;</string>
    <string name="print_order_id">&#12288;&#8194;订单号&#8194;</string>
    <string name="print_old_goods_code">&#12288;&#8194;旧货号&#8194;</string>
    <string name="print_remark">&#12288;&#12288;备注&#12288;</string>
    <string name="print_branch_code">&#12288;分店编号&#12288;</string>
    <string name="print_order_date">&#12288;下单日期&#12288;</string>
    <string name="print_invalid_date">&#12288;截至日期&#12288;</string>
    <string name="print_send_amount">&#12288;发货数量&#12288;</string>
    <string name="print_new_goods_code">&#12288;&#8194;新货号&#8194;</string>
    <string name="print_num">数量</string>
    <string name="print_size">尺码</string>
    <string name="print_attr">颜色</string>
    <string name="sort_order_code_swited">订单是否确认（未确认在前）</string>
    <string name="sort_order_code_id">订单货号ID（从小到大）</string>
    <string name="sort_order_time">下单时间（从近到远）</string>
    <string name="sort_shipment_time">发货时间（从近到远）</string>
    <string name="sort_branch">分店编号（首字母顺序）</string>
    <string name="sort_warehouse">库房名（首字母顺序）</string>
    <string name="sort_order_class"><![CDATA[订单类型（通下-->首单-->补货）]]></string>
    <string name="sort_order_num_rise">订单数量（从高到低）</string>
    <string name="newGoodsID">新货号</string>
    <string name="goodsIDType">货号类型</string>
    <string name="query">查询</string>
    <string name="oldGoodsId">旧货号</string>
    <string name="choice">选择</string>
    <string name="normal">正常</string>
    <string name="attempt">试卖</string>
    <string name="replace">代卖</string>
    <string name="special">特殊</string>
    <string name="codeCreateTime">货号创建时间</string>
    <string name="allow">允许</string>
    <string name="forbid">禁止</string>
    <string name="printer_set">打印机设置</string>
    <string name="allowOrder">允许下单</string>
    <string name="count">统计</string>
    <string name="clear">清空</string>
    <string name="queryTime">查询日期</string>
</resources>