<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    <item-->
    <!--        android:id="@+id/app_bar_search"-->
    <!--        android:icon="@drawable/ic_search_black_24dp"-->
    <!--        android:title="@string/search"-->
    <!--        app:actionViewClass="android.widget.SearchView"-->
    <!--        app:showAsAction="always|withText" />-->
    <item
        android:id="@+id/menu_printer"
        android:icon="@drawable/ic_printer"
        android:title="@string/printer_set"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_count"
        android:icon="@drawable/ic_count"
        android:title="@string/count"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_screen"
        android:icon="@drawable/ic_screen"
        android:title="@string/screen"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_more"
        android:title="@string/choice"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
</menu>