<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/createTimeText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start|center"
        android:paddingStart="@dimen/drawer_margin"
        android:paddingEnd="@dimen/drawer_margin"
        android:text="@string/codeCreateTime"
        android:textSize="@dimen/drawer_text_size"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.27" />

    <TextView
        android:id="@+id/createTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_rectangle_black"
        android:drawableEnd="@drawable/ic_calendar"
        android:gravity="start|center"
        android:hint="@string/choice_date"
        android:paddingStart="@dimen/drawer_margin"
        android:paddingEnd="@dimen/drawer_margin"
        android:textSize="@dimen/text_size"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toEndOf="@+id/createTimeText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.58" />

    <Button
        android:id="@+id/createTimeClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toEndOf="@+id/createTime"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15" />

    <View
        android:id="@+id/divider0"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTime" />

    <TextView
        android:id="@+id/goodsClassId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:paddingStart="@dimen/drawer_margin"
        android:paddingEnd="0dp"
        android:text="@string/goodsClass"
        android:textSize="@dimen/text_size"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider0"
        app:layout_constraintWidth_percent="0.85" />

    <Button
        android:id="@+id/goodsClassIdClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toEndOf="@+id/goodsClassId"
        app:layout_constraintTop_toBottomOf="@+id/divider0"
        app:layout_constraintWidth_percent="0.15" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goodsClassId" />

    <TextView
        android:id="@+id/goodsId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:paddingStart="@dimen/drawer_margin"
        android:paddingEnd="0dp"
        android:text="@string/goodsID"
        android:textSize="@dimen/text_size"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:layout_constraintWidth_percent="0.85" />

    <Button
        android:id="@+id/goodsIdClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toEndOf="@+id/goodsClassId"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:layout_constraintWidth_percent="0.15" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goodsId" />

    <TextView
        android:id="@+id/oldGoodsId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableEnd="@drawable/ic_sr_blue"
        android:gravity="start|center"
        android:paddingStart="@dimen/drawer_margin"
        android:paddingEnd="0dp"
        android:text="@string/oldGoodsId"
        android:textSize="@dimen/text_size"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintWidth_percent="0.85" />

    <Button
        android:id="@+id/oldGoodsIdClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toEndOf="@+id/oldGoodsId"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintWidth_percent="0.15" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldGoodsId" />

    <TextView
        android:id="@+id/goodsType"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start|center"
        android:paddingStart="@dimen/drawer_margin"
        android:paddingEnd="0dp"
        android:text="@string/goodsIDType"
        android:textColor="@color/disable_gray"
        android:textSize="@dimen/text_size"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintWidth_percent="0.20" />

    <RadioGroup
        android:id="@+id/goodsTypeGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toEndOf="@+id/goodsType"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintWidth_percent="0.65">

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/drawer_margin"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/attempt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/attempt" />

        <RadioButton
            android:id="@+id/replace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/replace" />

        <RadioButton
            android:id="@+id/special"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/special" />
    </RadioGroup>

    <Button
        android:id="@+id/goodsTypeClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toEndOf="@+id/oldGoodsId"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintWidth_percent="0.15" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goodsTypeGroup" />

    <TextView
        android:id="@+id/isStock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start|center"
        android:paddingStart="@dimen/drawer_margin"
        android:paddingEnd="0dp"
        android:text="@string/allowOrder"
        android:textColor="@color/disable_gray"
        android:textSize="@dimen/text_size"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintWidth_percent="0.20" />

    <RadioGroup
        android:id="@+id/isStockGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toEndOf="@+id/isStock"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintWidth_percent="0.65">

        <RadioButton
            android:id="@+id/allow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/drawer_margin"
            android:layout_weight="0.5"
            android:text="@string/allow" />

        <RadioButton
            android:id="@+id/forbid"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/forbid" />
    </RadioGroup>

    <Button
        android:id="@+id/isStockClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toEndOf="@+id/isStockGroup"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintWidth_percent="0.15" />

    <View
        android:id="@+id/divider6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isStock" />

    <Button
        android:id="@+id/reset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/query"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toEndOf="@+id/reset"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>